--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -69,7 +69,7 @@
 
 </li>
 <li class>
-<a class="has-arrow" href="#" aria-expanded="false">
+<a class="has-arrow" href="/logout" aria-expanded="false">
 <img src="img/menu-icon/3.svg" alt>
 <span>Logout</span>
 </a>
